# Oxide

./: Cargo.toml  LICENSE  README.md  build.sh  run_tests.sh  x86-unknown-bare_metal.json
.cargo/: config.toml
src/: interrupts.rs  kdebug.rs  lib.rs  main.rs  serial.rs  vga_wrapper.rs
src/panic/: mod.rs
tests/: basic_boot.rs  should_panic.rs
