[package]
name = "oxide"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9.8" 
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
spin = "0.9.2"
volatile = "0.2.6"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

